--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,4 +1,3 @@
-
 /* navbar CSS */
 .navbar {
     box-shadow: 0 4px 2px -2px #c2c2c250;
@@ -23,4 +22,14 @@
 
 .navbar-dark .navbar-nav .nav-link:hover {
     color: #000;
+}
+
+
+/* main container */
+#main-container {
+    margin-top: 1%;
+}
+
+a {
+    text-decoration: none;
 }
