--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,11 @@
-
+.container {
+    width: auto;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 .login_page>.card>.card-body {
     padding: 40px 0px 0px 0px;
